@@ -11,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".RankingActivity"></activity>
+        <activity android:name=".ProfileActivity"></activity>
+        <activity android:name=".ScoreDetail" />
+        <activity android:name=".RankingActivity" />
         <activity android:name=".ResultActivity" />
         <activity android:name=".Adapter.AnswerSheetHelperAdapter" />
         <activity
