@@ -1,0 +1,10 @@
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24"
+    android:tint="?attr/colorControlNormal">
+  <path
+      android:fillColor="@android:color/black"
+      android:pathData="M19,3L5,3c-1.1,0 -2,0.9 -2,2v14c0,1.1 0.9,2 2,2h14c1.1,0 2,-0.9 2,-2L21,5c0,-1.1 -0.9,-2 -2,-2zM12,5h1.5v3l2,-3h1.7l-2,3 2,3h-1.7l-2,-3v3L12,11L12,5zM7,7.25h2.5L9.5,6.5L7,6.5L7,5h4v3.75L8.5,8.75v0.75L11,9.5L11,11L7,11L7,7.25zM19,13l-6,6 -4,-4 -4,4v-2.5l4,-4 4,4 6,-6L19,13z"/>
+</vector>
